mobile spacing fix

--- a/styles.css
+++ b/styles.css
@@ -222,35 +222,35 @@
   
     @media screen and (max-width: 1300px) {
       .pos0 {
-        transform: translate(-175px, -140px);
+        transform: translate(-170px, -140px);
       }
     
       .pos1 {
-        transform: translate(-175px, -40px);
+        transform: translate(-170px, -40px);
       }
     
       .pos2 {
-        transform: translate(-175px, 45px);
+        transform: translate(-170px, 45px);
       }
     
       .pos3 {
-        transform: translate(-175px, 140px);
+        transform: translate(-170px, 140px);
       }
     
     
       .pos4 {
-        transform: translate(50px, -140px);
+        transform: translate(75px, -140px);
       }
     
       .pos5 {
-        transform: translate(50px, -45px);
+        transform: translate(75px, -45px);
       }
     
       .pos6 {
-        transform: translate(50px, 40px);
+        transform: translate(75px, 40px);
       }
     
       .pos7 {
-        transform: translate(50px, 140px);
+        transform: translate(75px, 140px);
       }
     }
